.docker/dockerhub/k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.enable: "true"
    traefik.http.routers.account.entrypoints: websecure
    traefik.http.routers.account.rule: Host(`localhost`) && PathPrefix(`/api`)
    traefik.http.routers.account.tls: "true"
    traefik.http.routers.account.tls.certresolver: letsencryptl
  labels:
    io.kompose.service: app
  name: app
spec:
  type: LoadBalancer
  ports:
    - name: "8080"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "9090"
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: "5454"
      protocol: TCP
      port: 5454
      targetPort: 5454
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
