.docker/dockerhub/k8s/app/gin-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gin-app
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/gin-app: "true"
  podSelector:
    matchLabels:
      io.kompose.network/gin-app: "true"
